# libuv-tcp-chat-app

./: CMakeLists.txt  README.md
chat_client/: main.c
chat_server/: alloc.c  main.c  parser.c
chat_server/include/: alloc.h  data_structures.h  parser.h
